--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
         </div>
     </div>
-    <embed with="0" height="0" src="merry.mp3" autostart="true" loop="true">
+    <embed with="0" height="0" src="merry.mp3" autostart="true">
     <script type="text/javascript" src="snowstorm.js"></script>
   <canvas class="snow" width="100%" height="100%"></canvas>
   </body>
